--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Nicestart"
         tools:targetApi="31">
         <activity
+            android:name=".MainBn"
+            android:exported="false" />
+        <activity
             android:name=".Splash"
             android:exported="true">
             <intent-filter>
@@ -25,8 +28,7 @@
         </activity>
         <activity
             android:name=".Profile"
-            android:exported="true"
-            />
+            android:exported="true" />
         <activity
             android:name=".Main"
             android:exported="true"
@@ -38,8 +40,7 @@
             android:theme="@style/Theme.Nicestart.ActionBar" />
         <activity
             android:name=".Login"
-            android:exported="true"
-            ></activity>
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
