--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Nicestart"
         tools:targetApi="31">
         <activity
+            android:name=".MainBab"
+            android:exported="true" />
+        <activity
             android:name=".MainBn"
             android:exported="true" />
         <activity
